--- a/css/stack.cards.jquery.css
+++ b/css/stack.cards.jquery.css
@@ -33,6 +33,15 @@ div.style.style-2
 
 .rotate0
 {
+    -webkit-transform: rotate(-15deg);
+    -moz-transform: rotate(-15deg);
+    -o-transform: rotate(-15deg);
+    /*filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1.5); IE8-*/
+    -ms-transform: rotate(-15deg);
+}
+
+.rotate1
+{
     -webkit-transform: rotate(-10deg);
     -moz-transform: rotate(-10deg);
     -o-transform: rotate(-10deg);
@@ -40,29 +49,43 @@ div.style.style-2
     -ms-transform: rotate(-10deg);
 }
 
-.rotate1
-{
-    -webkit-transform: rotate(10deg);
-    -moz-transform: rotate(10deg);
-    -o-transform: rotate(10deg);
-    /*filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1.5); IE8-*/
-    -ms-transform: rotate(10deg);
-}
-
 .rotate2
 {
-    -webkit-transform: rotate(-20deg);
-    -moz-transform: rotate(-20deg);
-    -o-transform: rotate(-20deg);
-    /*filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1.5);*/ IE8-
-    -ms-transform: rotate(-20deg);
+    -webkit-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -o-transform: rotate(-5deg);
+    /*filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1.5); IE8-*/
+    -ms-transform: rotate(-5deg);
 }
 
 .rotate3
 {
-    -webkit-transform: rotate(20deg);
-    -moz-transform: rotate(20deg);
-    -o-transform: rotate(20deg);
+    /*nothing*/
+}
+
+.rotate4
+{
+    -webkit-transform: rotate(5deg);
+    -moz-transform: rotate(5deg);
+    -o-transform: rotate(5deg);
     /*filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1.5);*/ IE8-
-    -ms-transform: rotate(20deg);
+    -ms-transform: rotate(5deg);
+}
+
+.rotate5
+{
+    -webkit-transform: rotate(10deg);
+    -moz-transform: rotate(10deg);
+    -o-transform: rotate(10deg);
+    /*filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1.5);*/ IE8-
+    -ms-transform: rotate(10deg);
+}
+
+.rotate6
+{
+    -webkit-transform: rotate(15deg);
+    -moz-transform: rotate(15deg);
+    -o-transform: rotate(15deg);
+    /*filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1.5);*/ IE8-
+    -ms-transform: rotate(15deg);
 }
