--- a/css/set-cards.css
+++ b/css/set-cards.css
@@ -19,3 +19,4 @@
 .club-jack{ background-position: -1384px 0;}
 .club-queen{ background-position: -1523px 0;}
 .club-king{ background-position: -1661px 0;}
+.back{ background-position: -277px -804px;}
